# cytraco

./: .gitignore  .vulture_whitelist.py  ARCHITECTURE.md  CLAUDE.md  CODING.md  README.md  TODO.md  TODO.org  pyproject.toml
cytraco/: __init__.py  bootstrap.py  cli.py  config.py  errors.py  trainer.py  workout.py
cytraco/model/: __init__.py  config.py  power.py
cytraco/ui/: setup.py
reports/2e47231-pr-2/: cc.hal  cc.mi  cc.out  cc.raw  docs.out
reports/c66ffe2-pr-4/: cc.hal  cc.mi  cc.out  cc.raw  docs.out
scripts/: pr-stats.sh  quality-report.sh  simple-quality-report.sh
tests/: __init__.py  generators.py  test_bootstrap.py  test_cli.py  test_config.py  test_errors.py  test_power.py  test_trainer.py  test_ui_setup.py  test_workout.py
