[project]
name = "cytraco"
version = "2.0.0"
description = "Cycling trainer controller for automated interval workouts"
requires-python = ">=3.13"
dependencies = [
    "pycycling>=0.4.0",
    "bleak>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24.0",
    "vulture>=2.0",
]

[project.scripts]
cytraco = "cytraco.cli:app"

[tool.coverage.run]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_package = "cytraco"
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Enforce the basic application layers"
type = "layers"
layers = [
    "cytraco.ui | cytraco.config | cytraco.trainer",
    "cytraco.workout | cytraco.bootstrap",
    "cytraco.errors | cytraco.model",
]

[tool.ruff]
line-length=100

[tool.ruff.lint]
extend-select = [
    "ARG",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "COM",
    "C4",
    "C90",
    "D",
    "DOC",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FURB",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "PYI",
    "RUF",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TID",
    "TRY",
    "TC",
    "UP",
    "YTT",
    "W",
]
ignore = [
    "S101",
]

[tool.vulture]
min_confidence = 80
paths = ["cytraco", "tests", ".vulture_whitelist.py"]
exclude = []
