[project]
name = "cytraco"
version = "2.0.0"
description = "Cycling trainer controller for automated interval workouts"
requires-python = ">=3.13"
dependencies = [
    "pycycling>=0.4.0",
    "bleak>=0.21.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.11.2",
    "import-linter",
    "interrogate>=1.7.0",
    "mypy>=1.13.0",
    "pytest>=9.0",
    "pytest-asyncio>=0.24.0",
    "radon>=6.0.0",
    "ruff>=0.14.10",
    "vulture>=2.0",
]

[project.scripts]
cytraco = "cytraco.cli:app"

[tool.coverage.run]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_package = "cytraco"
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Enforce the basic application layers"
type = "layers"
layers = [
    "cytraco.ui | cytraco.config | cytraco.trainer",
    "cytraco.workout | cytraco.bootstrap",
    "cytraco.errors | cytraco.model",
]

[tool.ruff]
line-length=100
exclude = [".vulture_whitelist.py"]

[tool.ruff.lint]
# Rules as of Ruff 0.14.10, 2026-01-02
select = [
    "ARG",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "COM",
    "C4",
    "C90",
    "D",
    "E",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FURB",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "PYI",
    "RUF",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TID",
    "TRY",
    "TC",
    "UP",
    "YTT",
    "W",
]
ignore = [
    "D203",
    "D213",
    "D413",
    "S101",
    "TC001",   # Favour slight readability of slight startup speed
    "TRY003",  # raise-vanilla-args
]

[tool.vulture]
min_confidence = 70
paths = ["cytraco", "tests", ".vulture_whitelist.py"]
exclude = []

[tool.radon]
mi_min = "B"
cc_min = ""

[tool.interrogate]
fail-under = 95
ignore-private = true
ignore-nested-functions = true
ignore-overloaded-functions = true
ignore-property-decorators = true
ignore-setters = true
ignore-semiprivate = true
verbose = 1

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
